<resources>
    <string name="app_name">eNOugh</string>
    <string name="contact">Contact 1 </string>
    <string name="sendmessage">Send Message</string>
    <string name="template_message_1">This is a test template message1</string>
    <string name="template_message_2">This is a test template message2</string>
    <string name="locationCheck">location</string>
    <string name="contact_info">Please choose 1-3 contacts that you wish to have contacted in the event of an emergency. </string>
    <string name="contact_two">Contact 2</string>
    <string name="contact_three">Contact 3</string>
    <string name="contact_header">Emergency Contact Information</string>
    <string name="your_name">Your Name</string>
    <string name="select_a_message">Select a Message</string>
    <string name="message1"><font size="20">I am in danger please contact help.</font></string>
    <string name="message2"><font size="20">I am in danger please try to contact me. </font></string>
    <string name="message3"><font size="20">I am in danger please contact 911.</font></string>
    <string name="setUpText">Click to Set Up</string>
    <string name="save">Save</string>
    <string name="location">Share Location</string>
    <string name="contact1"><font size="20">Tap to select contact 1</font></string>
    <string name="contact2"><font size="20">Tap to select contact 2</font></string>
    <string name="contact3"><font size="20">Tap to select contact 3</font></string>
    <string name="tablet_hint_message"><font size="30">Type a message or select from below</font></string>
    <string name="your_message_hint"><font size="20">Your Message Here!</font></string>
    <string name="your_message_hint2"><font size="25">Your Message Here!</font></string>

</resources>
