<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lematthe.calpoly.edu.enough.MainActivity"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.89"
        android:weightSum="1">

        <TextView
            android:text="@string/your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView5" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:text="@string/contact_header"
            android:layout_width="match_parent"
            android:textSize="25dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView3" />

        <TextView
            android:text="@string/contact_info"
            android:layout_width="match_parent"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_gravity="left" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="32dp">

            <Button
                android:text="@string/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:id="@+id/contact1"
                android:textColor="@color/colorAccent"
                android:gravity="left"
                android:drawableBottom="@android:color/black"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            >

            <Button
                android:text="@string/contact_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:id="@+id/contact2"
                android:gravity="left"
                android:background="@null"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="31dp">

            <Button
                android:text="@string/contact_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:gravity="left"
                android:background="@null"
                android:id="@+id/contact3" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:id="@+id/selectmessage"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/select_a_message"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:gravity="left"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:id="@+id/save"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
